src/objects/QB_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Access_token__c</fullName>
        <label>Access token</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Scheduler_Sync__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Last Scheduler Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RealMId__c</fullName>
        <label>RealMId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_token__c</fullName>
        <label>Refresh token</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>QB Credentials</label>
    <nameField>
        <displayFormat>QBC-{00000}</displayFormat>
        <label>QB Credential Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>